# zhuzhao

./: .gitignore  README.md  components.json  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
docs/: RELEASE_NOTES_v0.1.0.md  ROADMAP_PHASES.md  UI_UX_SPEC.md  V0_ACCEPTANCE.md
migrations/: 0001_init.sql  0002_core_tables.sql  0003_app_settings.sql  0004_app_logs.sql  0005_pomodoro_sessions.sql  0006_pomodoro_single_active_index.sql
openspec/: project.md
openspec/specs/desktop-ui/: spec.md
openspec/specs/journal-memory/: spec.md
openspec/specs/llm-intake/: spec.md
openspec/specs/markdown-sync/: spec.md
openspec/specs/task-supervision/: spec.md
openspec/specs/zhuzhao-core/: spec.md
scripts/: diagnose-markdone.py  diagnose-phase6.py  diagnose-phase6fix.py  diagnose-phase7-regen.py  diagnose-phase7-test.py  diagnose-phase7.py  diagnose-phase9-readonly.py  diagnose-state.py  readonly-query.py  schema.py
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs
src/components/: ErrorBoundary.tsx
src/components/badges/: StatusBadges.tsx
src/components/layout/: ChatSidebar.tsx  LeftNav.tsx  PagePlaceholder.tsx  QuickInputDialog.tsx
src/components/ui/: ambient-background.tsx  badge.tsx  button.tsx  card.tsx  compact-row.tsx  hero-panel.tsx  metric-pill.tsx  section-header.tsx  sheet.tsx  (+1 more)
src/lib/: db.ts  id.ts  seed.ts  utils.ts
src/stores/: app-store.ts  chat-store.ts
src/styles/: globals.css
src/types/: app.ts  db.ts  enums.ts
(+44 files in other folders)
